--- a/style.css
+++ b/style.css
@@ -1,10 +1,85 @@
-p {
-    background-color:turquoise;
-    color: teal;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    background: linear-gradient(to bottom right, #ffb385, #ff63a5);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .main1 {
+    position: relative;
+    width: 360px;
+    height: 640px;
+    background-color: #ffffff00;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+  }
+  
+  .content {
+    text-align: center;
+    padding-top: 50px;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .title {
+    font-size: 36px;
+    color: white;
+    margin: 20px 0;
+    font-family: 'Baloo 2',cursive;
+  }
+  
+  #kid {
+    width: 150px;
+    margin-top: 20px;
+  }
+  
+  #cat {
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    width: 80px;
+  }
+  
+  .btn {
+    margin-top: 30px;
+    padding: 15px 30px;
+    font-size: 20px;
+    background-color: white;
+    border: none;
+    border-radius: 12px;
+    color: #f26c4f;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    font-family: 'Baloo 2',italic;
+  }
+  a{
+   text-decoration: none; 
+  }
+  a:hover{
+    background:none;
+    color: white;
+    border: white;
+    border-width: 12px;
+    border-radius: 12px;
+  }
+  
+.blob {
+  position: absolute;
+  opacity: 0.2;
+  width: 150px;
 }
-body{
-    background-color: #2e2e2e;
+#topleft{
+  top: -40px;
+  left: -40px;
 }
-div{
-    position:absolute;
+
+#bottomright {
+  bottom: -90px;
+  right: -90px;
 }
